feeat : update user db, handle free tiral subscription and its webhook
